<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Main_Menu"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    >

    <ProgressBar
        android:id="@+id/main_menu_PB_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Determinate"
        android:progressDrawable="@drawable/progress_bar_animation"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorRed"

        />
    <LinearLayout
        android:id="@+id/main_menu_LAY_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to_view"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/main_menu_spinner"
                android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                />

            <EditText
                android:id="@+id/main_menu_EDT_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/my_weigh_kg"
                android:maxLines="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_activities"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_num_runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_total_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_pace"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_avg_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_calories_burned"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_total_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_BTN_new_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_new_activity"
                android:textAlignment="viewStart"
                app:backgroundTint="@color/colorPrimary"
                app:icon="@drawable/ic_timer"
                app:iconGravity="start"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_BTN_manual_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manually_add_activity"
                android:textAlignment="viewStart"
                app:backgroundTint="@color/colorPrimary"
                app:icon="@drawable/ic_add"
                app:iconGravity="start"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_LBL_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress_history"
                style="@style/Widget.MaterialComponents.Button"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                app:icon="@drawable/ic_history"
                app:iconGravity="start"
                />

        </LinearLayout>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/main_menu_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"

            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>