<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activity_New_Record">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/new_run_LAY_radio_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </FrameLayout>

    <Chronometer
        android:id="@+id/new_run_TMR_chronometer"
        android:layout_below="@+id/new_run_LAY_radio_buttons"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="54sp"
        android:text="00:00"
        android:textAlignment="center"
        />

    <LinearLayout
        android:id="@+id/new_run_LAY_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/new_run_BTN_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            />
        <Button
            android:id="@+id/new_run_BTN_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:enabled="false"
            android:layout_marginStart="5dp"
            />
        <Button
            android:id="@+id/new_run_BTN_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:enabled="false"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/new_run_LBL_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="km"
            android:textSize="18sp"
            android:paddingStart="5dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/new_run_LBL_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18sp"
            android:paddingStart="10dp"
            />
        <TextView
            android:id="@+id/new_run_LBL_kmh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_h"
            android:textSize="18sp"
            android:paddingStart="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_burned"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/new_run_LBL_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18sp"
            android:paddingStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/new_run_BTN_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/new_run_BTN_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".tsah"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>