<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Main_Menu"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/main_menu_LAY_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_menu_LAY_distance_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/main_menu_spinner"
                style="?android:attr/spinnerDropDownItemStyle"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:background="@color/colorSpinner"
                android:textAlignment="center"
                android:tooltipText="Activity Type" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_runs"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_num_runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp"
                />
            </LinearLayout>

            <LinearLayout
            android:id="@+id/main_menu_LAY_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:textSize="18sp"
                />



            <TextView
                android:id="@+id/main_menu_LBL_total_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/main_menu_LBL_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textSize="18sp"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/shalom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_pace"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/main_menu_LBL_avg_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_h"
            android:textSize="18sp"
            />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/main_menu_LAY_pace_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >


            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_LBL_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/history_underline"
                style="@style/Widget.MaterialComponents.Button"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight="1"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_menu_LAY_activity_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_BTN_new_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_new_activity"
                android:layout_weight="1"
                app:backgroundTint="@color/colorReset"
                android:textColor="@color/colorPrimary"
                />
            <!--                style="@style/Widget.MaterialComponents.Button"-->


            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_BTN_manual_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manually_add_activity"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:backgroundTint="@color/colorPrimaryDark"

                />

        </LinearLayout>

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_toEndOf="@id/main_menu_LAY_pace_stats"-->
<!--            >-->


<!--        </LinearLayout>-->
        <com.jjoe64.graphview.GraphView
            android:id="@+id/main_menu_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_LAY_all"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>